<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com</groupId>
	<artifactId>SynovergePOMAutomation</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>jar</packaging>

	<name>SynovergePOMAutomation</name>
	<url>http://maven.apache.org</url>

	<properties>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>

		<azure-cosmos>4.25.0</azure-cosmos>
		<webdrivermanager>3.8.1</webdrivermanager>
		<testng>7.4.0</testng>
		<selenium-java>3.7.1</selenium-java>
		<commons-io>2.5</commons-io>
		<extentreports>5.0.8</extentreports>
		<rest-assured>4.4.0</rest-assured>
		<json>20180130</json>
		<json-simple>1.1.1</json-simple>
		<log4j>2.17.1</log4j>
		<guava>23.0</guava>
		<jackson-annotations>2.9.9</jackson-annotations>
		<jackson-databind>2.9.9</jackson-databind>
		<json-path>4.2.0</json-path>
		<poi-ooxml>4.1.0</poi-ooxml>
		<poi>4.1.0</poi>
		<azure-storage>8.4.0</azure-storage>
		<open-csv>5.5.2</open-csv>
		<mongodb>3.12.10</mongodb>
		<azureIot-Service-Client>1.17.1</azureIot-Service-Client>
		<iot-device-client>2.0.1</iot-device-client>
	</properties>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.0.0</version>
				<configuration>
					<forkCount>3</forkCount>
					<reuseForks>true</reuseForks>
<!--				<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>-->
					<suiteXmlFiles>
						<suiteXmlFile>suites\testng_Regression.xml</suiteXmlFile>
					</suiteXmlFiles>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.3.2</version>
				<configuration>
					<show>private</show>
					<nohelp>true</nohelp>
				</configuration>
			</plugin>
		
</plugins>
	</build>
	
	<repositories>
	<repository>
  <id>CICDPipeLineQA</id>
  <url>http://tfs-2020:8080/tfs/Microsoft%20Product%20Server%20and%20Technologies/CICDPipeLineQA/_packaging/CICDPipeLineQA/maven/v1</url>
  <releases>
    <enabled>true</enabled>
  </releases>
  <snapshots>
    <enabled>true</enabled>
  </snapshots>
</repository>
</repositories>

	<dependencies>

		<dependency>
			<groupId>com.azure</groupId>
			<artifactId>azure-cosmos</artifactId>
			<version>${azure-cosmos}</version>
		</dependency>

		<dependency>
			<groupId>io.github.bonigarcia</groupId>
			<artifactId>webdrivermanager</artifactId>
			<version>${webdrivermanager}</version>
		</dependency>

		<dependency>
			<groupId>org.testng</groupId>
			<artifactId>testng</artifactId>
			<version>${testng}</version>
		</dependency>

		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-java</artifactId>
			<version>${selenium-java}</version>
		</dependency>

		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>${commons-io}</version>
		</dependency>

		<dependency>
			<groupId>com.aventstack</groupId>
			<artifactId>extentreports</artifactId>
			<version>${extentreports}</version>
		</dependency>

		<dependency>
			<groupId>io.rest-assured</groupId>
			<artifactId>rest-assured</artifactId>
			<version>${rest-assured}</version>
		</dependency>

		<dependency>
			<groupId>org.json</groupId>
			<artifactId>json</artifactId>
			<version>${json}</version>
		</dependency>

		<dependency>
			<groupId>com.googlecode.json-simple</groupId>
			<artifactId>json-simple</artifactId>
			<version>${json-simple}</version>
		</dependency>
		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>${guava}</version>
		</dependency>

		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-annotations</artifactId>
			<version>${jackson-annotations}</version>
		</dependency>

		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>${jackson-databind}</version>
		</dependency>

		<dependency>
			<groupId>io.rest-assured</groupId>
			<artifactId>json-path</artifactId>
			<version>${json-path}</version>
		</dependency>

		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi</artifactId>
			<version>${poi}</version>
		</dependency>

		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi-ooxml</artifactId>
			<version>${poi-ooxml}</version>
		</dependency>
			
		
		<dependency>
			<groupId>com.microsoft.azure</groupId>
			<artifactId>azure-storage</artifactId>
			<version>${azure-storage}</version>
		</dependency>

		<dependency>
			<groupId>com.opencsv</groupId>
			<artifactId>opencsv</artifactId>
			<version>${open-csv}</version>
		</dependency>
		<dependency>
			<groupId>org.mongodb</groupId>
			<artifactId>mongo-java-driver</artifactId>
			<version>${mongodb}</version>
		</dependency>
		<dependency>
			<groupId>com.microsoft.azure.sdk.iot</groupId>
			<artifactId>iot-device-client</artifactId>
			<version>${iot-device-client}</version>
		</dependency>
		<dependency>
			<groupId>com.microsoft.azure.sdk.iot</groupId>
			<artifactId>iot-service-client</artifactId>
			<version>${azureIot-Service-Client}</version>
			<type>jar</type>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-1.2-api</artifactId>
			<version>${log4j}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>${log4j}</version>
		</dependency>
	</dependencies>
</project>
